--- a/src/main/resources/fxml/Ventas/Proformas/Proformas.fxml
+++ b/src/main/resources/fxml/Ventas/Proformas/Proformas.fxml
@@ -83,7 +83,7 @@
                   <Line endX="600.0" layoutX="133.0" layoutY="49.0" startX="-100.0" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="45.0" layoutY="83.0" prefHeight="120.0" prefWidth="750.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
+            <AnchorPane fx:id="proforma_formulario" layoutX="45.0" layoutY="83.0" prefHeight="120.0" prefWidth="750.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
                <children>
                   <DatePicker fx:id="fechaProfSh" layoutX="70.0" layoutY="94.0" />
                   <TextField fx:id="clienteSh" layoutX="70.0" layoutY="16.0" prefHeight="25.0" prefWidth="248.0" />
@@ -118,7 +118,7 @@
                   <TextField fx:id="correoSh" layoutX="70.0" layoutY="55.0" prefHeight="25.0" prefWidth="248.0" />
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="33.0" layoutY="339.0" prefHeight="402.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+            <AnchorPane fx:id="proforma_tabla" layoutX="33.0" layoutY="339.0" prefHeight="402.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                <children>
                   <AnchorPane layoutX="38.0" layoutY="195.0" prefHeight="330.0" prefWidth="526.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="72.0">
                      <children>
