--- a/src/main/java/fxml/RecursosHumanos/Roles/Roles.fxml
+++ b/src/main/java/fxml/RecursosHumanos/Roles/Roles.fxml
@@ -1,114 +1,204 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane id="AnchorPane" fx:id="usuario_container" prefHeight="574.0" prefWidth="973.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.RecursosHumanos.RolesController">
    <children>
-      <Pane prefHeight="50.0" prefWidth="250.0">
-         <children>
-            <Label layoutX="82.0" layoutY="10.0" text="Roles">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="17.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
-            <Line endX="100.0" layoutX="125.0" layoutY="47.0" startX="-100.0" />
-         </children>
-      </Pane>
-      <AnchorPane layoutX="-1.0" layoutY="49.0" prefHeight="521.0" prefWidth="250.0">
-         <children>
-            <Label layoutX="12.0" layoutY="28.0" prefHeight="21.0" prefWidth="114.0" text="Rol" />
-            <TextField layoutX="129.0" layoutY="25.0" prefHeight="25.0" prefWidth="106.0" />
-            <Button layoutX="129.0" layoutY="79.0" mnemonicParsing="false" text="Button" />
-            <TableView layoutX="14.0" layoutY="180.0" prefHeight="202.0" prefWidth="224.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="Rol ID" />
-                <TableColumn prefWidth="148.0" text="Descripción" />
-              </columns>
-            </TableView>
-            <Button layoutX="144.0" layoutY="485.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
-         </children>
-      </AnchorPane>
-      <AnchorPane layoutX="250.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
-         <children>
-            <AnchorPane layoutY="50.0" prefHeight="521.0" prefWidth="750.0">
+      <SplitPane dividerPositions="0.37166324435318276" layoutX="-4.0" layoutY="-4.0" prefHeight="578.0" prefWidth="976.0">
+         <items>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="266.0" minHeight="10.0" prefHeight="238.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="306.0" minHeight="10.0" prefHeight="72.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="374.0" minHeight="10.0" prefHeight="240.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="306.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <TabPane prefHeight="521.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
-                    <tabs>
-                      <Tab text="General">
-                           <content>
-                              <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                                 <children>
-                                    <TableView layoutX="14.0" layoutY="14.0" prefHeight="465.0" prefWidth="282.0">
-                                      <columns>
-                                        <TableColumn prefWidth="281.0" text="Usuarios Disponibles" />
-                                      </columns>
-                                    </TableView>
-                                    <TableView layoutX="454.0" layoutY="14.0" prefHeight="465.0" prefWidth="282.0">
-                                       <columns>
-                                          <TableColumn prefWidth="281.0" text="Usuarios Asignados" />
-                                       </columns>
-                                    </TableView>
-                                    <Button layoutX="355.0" layoutY="119.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="&gt;">
-                                       <font>
-                                          <Font name="System Bold" size="14.0" />
-                                       </font>
-                                    </Button>
-                                    <Button layoutX="355.0" layoutY="170.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="&lt;">
-                                       <font>
-                                          <Font name="System Bold" size="14.0" />
-                                       </font>
-                                    </Button>
-                                    <Button layoutX="355.0" layoutY="283.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="&gt;&gt;">
-                                       <font>
-                                          <Font name="System Bold" size="14.0" />
-                                       </font>
-                                    </Button>
-                                    <Button layoutX="355.0" layoutY="337.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="&lt;&lt;">
-                                       <font>
-                                          <Font name="System Bold" size="14.0" />
-                                       </font>
-                                    </Button>
-                                 </children>
-                              </AnchorPane>
-                           </content></Tab>
-                      <Tab text="Permisos">
-                           <content>
-                              <TableView prefHeight="200.0" prefWidth="200.0">
-                                <columns>
-                                  <TableColumn prefWidth="390.0" text="Permisos de acceso" />
-                                  <TableColumn prefWidth="360.0" text="Valores" />
-                                </columns>
-                              </TableView>
-                           </content>
-                        </Tab>
-                    </tabs>
-                  </TabPane>
+                  <GridPane prefHeight="245.0" prefWidth="484.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="237.0" minWidth="10.0" prefWidth="34.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="467.0" minWidth="10.0" prefWidth="450.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="467.0" minWidth="10.0" prefWidth="450.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="75.0" minHeight="4.0" prefHeight="12.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="138.0" minHeight="9.0" prefHeight="63.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="67.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label prefHeight="34.0" prefWidth="139.0" text="Búsqueda" GridPane.columnIndex="1">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
+                        <Line endX="100.0" startX="-100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label prefHeight="35.0" prefWidth="237.0" text="Nombre:" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="35.0" prefWidth="244.0" text="Codigo :" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label prefHeight="35.0" prefWidth="244.0" text="Estado:" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="BusquedaNombre" prefHeight="27.0" prefWidth="237.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                        <ComboBox fx:id="BusquedaEstado" prefHeight="25.0" prefWidth="173.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                        <ComboBox fx:id="BusquedaRol" prefHeight="25.0" prefWidth="172.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                     </children>
+                  </GridPane>
+                  <GridPane maxHeight="1.7976931348623157E308" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="324.0" minWidth="10.0" prefWidth="243.0" />
+                      <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="212.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints />
+                      <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                    </rowConstraints>
+                     <children>
+                        <Button maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#visualizarRol" prefHeight="32.0" prefWidth="144.0" text="Visualizar" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                     </children>
+                  </GridPane>
+                  <TableView fx:id="TablaRoles" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="242.0" prefWidth="359.0" GridPane.rowIndex="2">
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                     <columns>
+                        <TableColumn fx:id="ColumnaCodigo" minWidth="61.0" prefWidth="72.0" text="Codigo" />
+                        <TableColumn fx:id="ColumnaNombre" minWidth="75" prefWidth="100.0" text="Nombre" />
+                        <TableColumn fx:id="ColumnaEstado" minWidth="73.0" prefWidth="73.0" text="Estado" />
+                        <TableColumn fx:id="ColumnaDescipcion" prefWidth="112.0" text="Descripcion" />
+                     </columns>
+                  </TableView>
+                  <GridPane maxWidth="1.7976931348623157E308" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="180.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="179.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarRoles" text="Buscar" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" />
+                     </children>
+                  </GridPane>
                </children>
-            </AnchorPane>
-            <Pane prefHeight="50.0" prefWidth="243.0">
+            </GridPane>
+            <GridPane>
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="15.0" />
+                <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="582.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="187.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="433.0" minHeight="0.0" prefHeight="12.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="383.0" minHeight="0.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="338.0" minHeight="10.0" prefHeight="107.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="338.0" minHeight="10.0" prefHeight="16.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="404.0" minHeight="10.0" prefHeight="404.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <Label layoutX="133.0" layoutY="10.0" text="Detalle del Rol">
+                  <Label text="Detalle del Rol" GridPane.columnIndex="1">
                      <font>
                         <Font size="20.0" />
                      </font>
                   </Label>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Line endX="600.0" layoutX="133.0" layoutY="50.0" startX="-100.0" />
+                  <GridPane prefHeight="155.0" prefWidth="131.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Line endX="200.0" startX="-100.0" />
+                     </children>
+                  </GridPane>
+                  <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <children>
+                        <TitledPane fx:id="TitlePane" animated="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="194.0" prefWidth="588.0" text="Informacion General" HBox.hgrow="ALWAYS">
+                           <content>
+                              <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="142.0" prefWidth="673.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.0" minWidth="10.0" prefWidth="99.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.0" minWidth="10.0" prefWidth="195.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="285.0" minWidth="10.0" prefWidth="119.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="230.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="97.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="25.0" prefWidth="76.0" text="Nombre:" />
+                                    <TextField fx:id="VerNombre" prefHeight="25.0" prefWidth="165.0" GridPane.columnIndex="1" />
+                                    <Label alignment="CENTER" prefHeight="17.0" prefWidth="78.0" text="Descripcion:" GridPane.columnIndex="2" />
+                                    <TextArea fx:id="VerDescripcion" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="60.0" prefWidth="255.0" GridPane.columnIndex="3" />
+                                 </children>
+                              </GridPane>
+                           </content></TitledPane>
+                     </children>
+                  </HBox>
+                  <SplitPane maxWidth="1.7976931348623157E308" prefHeight="160.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5">
+                     <items>
+                        <GridPane>
+                           <children>
+                              <TreeTableView fx:id="ArbolPrivilegiosTabla" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="294.0" prefWidth="201.0" GridPane.columnIndex="1">
+                                 <columnResizePolicy>
+                                    <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                                 <columns>
+                                    <TreeTableColumn fx:id="ArbolAccionesColumna" prefWidth="75.0" text="Aciones" />
+                                    <TreeTableColumn fx:id="ArbolPrivilegiosColumna" prefWidth="75.0" text="Privilegios" />
+                                 </columns>
+                              </TreeTableView>
+                           </children>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="60.0" />
+                              <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="445.0" />
+                              <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="80.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="7.0" prefWidth="7.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                        </GridPane>
+                     </items>
+                  </SplitPane>
                </children>
-            </Pane>
-         </children>
-      </AnchorPane>
+            </GridPane>
+         </items>
+      </SplitPane>
    </children>
 </AnchorPane>
