--- a/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
+++ b/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -14,7 +15,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.PromocionesController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.PromocionesController">
    <children>
       <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="572.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="750.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -54,10 +55,10 @@
             </AnchorPane>
             <AnchorPane layoutX="33.0" layoutY="283.0" prefHeight="322.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="250.0">
                <children>
-                  <TableView layoutX="12.0" layoutY="15.0" prefHeight="200.0" prefWidth="227.0">
+                  <TableView fx:id="tabla_promociones" layoutX="12.0" layoutY="15.0" prefHeight="200.0" prefWidth="227.0">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="Código" />
-                      <TableColumn prefWidth="151.0" text="Descripción" />
+                      <TableColumn fx:id="columna_codigo" prefWidth="75.0" text="Código" />
+                      <TableColumn fx:id="columna_tipo" prefWidth="151.0" text="Tipo" />
                     </columns>
                   </TableView>
                   <Button layoutX="141.0" layoutY="277.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
@@ -65,7 +66,7 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="283.0" layoutY="33.0" prefHeight="572.0" prefWidth="750.0" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="promo_formulario" layoutX="283.0" layoutY="33.0" prefHeight="572.0" prefWidth="750.0" AnchorPane.leftAnchor="250.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="50.0" prefWidth="750.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
@@ -99,9 +100,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <RadioButton fx:id="rbPorCantidad" layoutX="196.0" layoutY="69.0" mnemonicParsing="false" text="Por Cantidad" />
-                  <RadioButton fx:id="rbPorBonificacion" layoutX="345.0" layoutY="69.0" mnemonicParsing="false" text="Por Bonificación" />
-                  <RadioButton fx:id="rbPorPorcentaje" layoutX="506.0" layoutY="69.0" mnemonicParsing="false" text="Por Porcentaje" />
+                  <ComboBox fx:id="comboBoxTipoPromo" layoutX="196.0" layoutY="65.0" prefHeight="25.0" prefWidth="170.0" />
                   <Label layoutX="27.0" layoutY="104.0" text="Producto:">
                      <font>
                         <Font size="14.0" />
