--- a/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
+++ b/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
@@ -50,7 +50,7 @@
                      </font>
                   </Label>
                   <DatePicker fx:id="busqFecha" layoutX="130.0" layoutY="102.0" prefHeight="25.0" prefWidth="106.0" />
-                  <Button layoutX="175.0" layoutY="154.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+                  <Button layoutX="175.0" layoutY="154.0" mnemonicParsing="false" onAction="#buscar_promocion" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
                </children>
             </AnchorPane>
             <AnchorPane layoutX="33.0" layoutY="283.0" prefHeight="322.0" prefWidth="250.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="250.0">
