--- a/src/main/java/fxml/Materiales/Categorias/Categorias.fxml
+++ b/src/main/java/fxml/Materiales/Categorias/Categorias.fxml
@@ -81,7 +81,7 @@
                                  </font>
                               </Label>
                               <TextField fx:id="nombre_categoria" layoutX="144.0" layoutY="66.0" prefHeight="25.0" prefWidth="445.0" />
-                              <TextField layoutX="144.0" layoutY="134.0" prefHeight="25.0" prefWidth="445.0" />
+                              <TextField fx:id="codigo_categoria" layoutX="144.0" layoutY="134.0" prefHeight="25.0" prefWidth="445.0" />
                               <Label layoutX="21.0" layoutY="136.0" text="Código">
                                  <font>
                                     <Font size="14.0" />
@@ -97,7 +97,7 @@
                                  </font>
                               </Label>
                               <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
-                              <TextField layoutX="14.0" layoutY="61.0" prefHeight="118.0" prefWidth="668.0" />
+                              <TextField fx:id="descripcion_categoria" layoutX="14.0" layoutY="61.0" prefHeight="118.0" prefWidth="668.0" />
                            </children>
                         </Pane>
                      </children>
