--- a/src/main/java/fxml/Ventas/Proformas/Proformas.fxml
+++ b/src/main/java/fxml/Ventas/Proformas/Proformas.fxml
@@ -62,7 +62,7 @@
                         <TableColumn fx:id="clienteColumn" prefWidth="182.0" text="Cliente" />
                      </columns>
                   </TableView>
-                  <Button fx:id="visualizarPedido" layoutX="140.0" layoutY="271.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+                  <Button layoutX="140.0" layoutY="271.0" mnemonicParsing="false" onAction="#visualizarProforma" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
                </children>
             </AnchorPane>
          </children>
@@ -75,7 +75,7 @@
             <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="50.0" prefWidth="750.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="133.0" layoutY="10.0" text="Nueva Proforma">
+                  <Label fx:id="proformaSub" layoutX="133.0" layoutY="10.0" text="Nueva Proforma">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -202,7 +202,7 @@
                            </font>
                         </Label>
                         <TextField fx:id="producto" layoutX="225.0" layoutY="45.0" prefHeight="25.0" prefWidth="250.0" />
-                        <Button fx:id="agregarProdProf" layoutX="487.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleAgregarProducto" prefHeight="20.0" prefWidth="20.0" text="Agregar Producto">
+                        <Button fx:id="agregarProdProf" layoutX="487.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleAgregarProducto" prefHeight="20.0" prefWidth="20.0" text="+">
                            <font>
                               <Font size="10.0" />
                            </font>
